--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,12 +48,21 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        if [ -z "$TWINE_PASSWORD" ]; then
-          echo "::error::PYPI_API_TOKEN secret is not set. Please add it in repository settings."
-          echo "::error::Go to: Settings → Secrets and variables → Actions → New repository secret"
-          echo "::error::Name: PYPI_API_TOKEN, Value: your PyPI API token"
+        if [ -z "$TWINE_PASSWORD" ] || [ "$TWINE_PASSWORD" = "" ]; then
+          echo "::error::❌ PYPI_API_TOKEN secret is not configured!"
+          echo ""
+          echo "📝 To fix this, follow these steps:"
+          echo "1. Go to PyPI: https://pypi.org/manage/account/token/"
+          echo "2. Create a new API token (copy it - it's shown only once!)"
+          echo "3. Go to GitHub: https://github.com/svalench/fastapi_viewsets/settings/secrets/actions"
+          echo "4. Click 'New repository secret'"
+          echo "5. Name: PYPI_API_TOKEN"
+          echo "6. Value: paste your PyPI token"
+          echo "7. Click 'Add secret'"
+          echo ""
+          echo "Then re-run this workflow."
           exit 1
         fi
-        echo "Uploading package to PyPI..."
+        echo "✅ PyPI token found. Uploading package to PyPI..."
         twine upload dist/*
 
